--- a/app/src/main/res/layout/fragment_country_details.xml
+++ b/app/src/main/res/layout/fragment_country_details.xml
@@ -26,7 +26,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
             android:text="@{country.name.official}"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +40,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
             android:text="@string/country_currency"
             app:layout_constraintTop_toBottomOf="@id/header_country_details"
@@ -56,7 +54,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/header_country_details"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,8 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+             android:layout_marginTop="16dp"
             android:text="@string/country_region"
             app:layout_constraintTop_toBottomOf="@id/country_currency_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -84,8 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/country_currency_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/country_region_text"
@@ -98,8 +93,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+             android:layout_marginTop="16dp"
             android:text="@string/country_sub_region"
             app:layout_constraintTop_toBottomOf="@id/country_region_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -113,8 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/country_region_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/country_subregion_text"
@@ -126,8 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+             android:layout_marginTop="16dp"
             android:text="@string/country_language"
             app:layout_constraintTop_toBottomOf="@id/country_subregion_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -137,12 +129,11 @@
         <TextView
             android:id="@+id/country_language"
             style="@style/normal_text"
-            android:text="@{country.nativeLanguage)}"
+            android:text="@{country.nativeLanguage}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/country_subregion_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/country_language_text"
@@ -155,7 +146,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
             android:text="@string/country_capital"
             app:layout_constraintTop_toBottomOf="@id/country_language_text"
@@ -170,8 +160,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/country_language_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/country_captial_text"
